fix username overflow & add todos

--- a/stylesheets/atom-chat.less
+++ b/stylesheets/atom-chat.less
@@ -47,6 +47,7 @@
         padding: @component-icon-padding;
         .user {
           color: #FFB14D;
+          word-wrap: break-word;
         }
         .text {
           word-wrap: break-word;
